# cuAmpcor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SConscript  pyproject.toml  revision  setup.py
examples/: GeoTiffSample.py  cuDenseOffsets.py  glacierSample.py  grossOffsets.py  varyGrossOffsetSample.py
pycuampcor/: __init__.py
src/: .ampcor.F.swp  .cuAmpcorChunk.cu.swp  .cuAmpcorController.cu.swp  .cuArraysCopy.cu.swp  .cuEstimateStats.cu.swp  .cuOffset.cu.swp  GDALImage.cu  GDALImage.h  Makefile  PyCuAmpcor.cpp  PyCuAmpcor.pyx  SConscript  SlcImage.cpp  SlcImage.cu  cuAmpcorChunk.cu  cuAmpcorChunk.h  cuAmpcorController.cpp  cuAmpcorController.cu  cuAmpcorParameter.cpp  cuAmpcorParameter.cu  cuAmpcorParameter.h  cuAmpcorProcessorOnePass.cpp  cuAmpcorProcessorTwoPass.cpp  cuAmpcorUtil.h  cuArrays.cu  cuArrays.h  cuArraysCopy.cu  cuArraysPadding.cu  cuCorrFrequency.cu  cuCorrNormalization.cu  cuDeramp.cu  cuEstimateStats.cu  main.cu  old_but_with_stats  setup.py  setup_cuAmpcor.py.jokull  showoffset.py  updated  work_log.txt
src/PyCuAmpcor/: __init__.py
